# project_template_raylib

./: .gitignore  CMakeLists.txt  build.bat
code/: CMakeLists.txt  MainGame.cpp  MainGame.hpp  main_game.cpp
